form fields generate password, localstorage updates form, added copy feature

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,6 +134,10 @@ button[disabled] {
 }
 
 @media (max-width: 690px) {
+  form {
+    font-size: 0.8rem;
+  }
+
   .btn {
     font-size: 1rem;
     margin: 16px 0px 0px 0px;
