--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,6 +133,82 @@ button[disabled] {
   overflow: hidden;
 }
 
+/* Modal */
+/* The Modal (background) */
+.modal {
+  display: none;
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* Modal Header */
+.modalHeader {
+  padding: 2px 16px;
+  background-color: #5e5e5e;
+  color: white;
+}
+
+/* Modal Body */
+.modalBody {
+  padding: 2px 16px;
+}
+
+/* Modal Footer */
+.modalFooter {
+  padding: 10px 16px;
+  background-color: #5e5e5e;
+  color: white;
+}
+
+/* Modal Content */
+.modalContent {
+  position: relative;
+  background-color: #fefefe;
+  margin: 10px auto;
+  padding: 0;
+  border: 1px solid #888;
+  width: 80%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  animation-name: animatetop;
+  animation-duration: 0.4s;
+}
+
+/* Add Animation */
+@keyframes animatetop {
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+  to {
+    top: 0;
+    opacity: 1;
+  }
+}
+
+/* Responsive */
+
 @media (max-width: 690px) {
   form {
     font-size: 0.8rem;
